ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
spec:
  rules:
  # - host: "foo.bar.com"
  - http:
      paths:
      - pathType: Prefix
        path: "/user"
        backend:
          service:
            name: user-service
            port:
              number: 3002
  # - host: "*.foo.com"
  - http:
      paths:
      - pathType: Prefix
        path: "/post"
        backend:
          service:
            name: post-service
            port:
              number: 3001
